<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/item"
        android:layout_width="367dp"
        android:layout_height="576dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/itempic"
            android:layout_width="82dp"
            android:layout_height="76dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="91dp"
            android:contentDescription="@string/todo"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/itempic"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/itempic"
            android:layout_toRightOf="@+id/itempic"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/seller"
            android:layout_width="79dp"
            android:layout_height="25dp"
            android:layout_below="@+id/item_name"
            android:layout_alignBottom="@+id/itempic"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="1dp"
            android:layout_toEndOf="@+id/itempic"
            android:layout_toRightOf="@+id/itempic"
            android:text="@string/seller"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/textview" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>